Add gp_upgrade into pipeline all tab
Signed-off-by: Nadeem Ghani <nghani@pivotal.io>

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -17,6 +17,7 @@ groups:
   - MM_gpperfmon
   - MM_gpcheck
   - MM_analyzedb
+  - MM_gp_upgrade
   - DPM_backup-restore
   - MM_gppkg
   - MM_gpinitsystem
